Feat: put reserve
Some bugs need to be solved
